@@ -750,7 +750,12 @@ bool netbsd_smart_interface::scan_smart_devices(smart_device_list & devlist,
 
   bool scan_ata = !*type || !strcmp(type, "ata");
   bool scan_scsi = !*type || !strcmp(type, "scsi") || !strcmp(type, "sat");
+
+#ifdef WITH_NVME_DEVICESCAN // TODO: Remove when NVMe support is no longer EXPERIMENTAL
   bool scan_nvme = !*type || !strcmp(type, "nvme");
+#else
+  bool scan_nvme =           !strcmp(type, "nvme");
+#endif
 
   // Make namelists
   char * * atanames = 0; int numata = 0;
